--- a/templates/article.html
+++ b/templates/article.html
@@ -1,3 +1,9 @@
-<a class="title" href="{{data.link}}">{{data.title}}</a><br />
-<p class="date">date: {{data.date}}</p>
-{{data.article_links}}
+<div class="article">
+  <div class="article-top">
+    <a class="title" href="{{data.link}}">{{data.title}}</a>
+  </div>
+  <div class="article-bottom">
+    <p class="date">date: {{data.date}}</p>
+    {{data.article_links}}
+  </div>
+</div>
