--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{{data.title}}</title>
-    <link rel="stylesheet" type="text/css" href="./mhwkb_style.css">
+    <link rel="stylesheet" type="text/css" href="mhwkb_style.css">
   </head>
   <body>
     <h1>{{data.title}}</h1>
     {{data.body}}
     <br /><br />
-    <a href="/index.html">Back Home</a><br />
+    <a href="index.html">Back Home</a><br />
     <a href="https://github.com/andy5995/mhwkb">About</a>
   </body>
 </html>
