--- a/templates/article.html
+++ b/templates/article.html
@@ -1,9 +1,9 @@
 <div class="article">
-  <div class="article-top">
-    <a class="title" href="{{data.link}}">{{data.title}}</a>
-  </div>
+  <a class="article-top" href="{{data.link}}">
+    <span class="title">{{data.title}}</span>
+  </a>
   <div class="article-bottom">
-    <p class="date">date: {{data.date}}</p>
+    <span class="date">date: {{data.date}}</span>
     {{data.article_links}}
   </div>
 </div>
