changed and organized styles
just a starting point; initialized all main class styles

--- a/templates/mhwkb_style.css
+++ b/templates/mhwkb_style.css
@@ -2,14 +2,6 @@ body {
     text-align: center;
 }
 
-p.date {
-    color: black;
-    background-color: #EFDECD;
-    font-size: 16px;
-    text-align: center;
-    display: inline-block;
-}
-
 a:link, a:visited {
     background-color: #f44336;
     color: white;
@@ -22,28 +14,58 @@ a:hover, a:active {
     background-color: red;
 }
 
-a:link.title, a:visited.title {
-    background-color: #3B444B;
-    color: yellow;
+/* Article */
+div.article {
+    margin: auto;
+    margin-top: 10px;
+    width: 80%;
+}
+
+/* Article Top */
+a.article-top {
+    background-color: #3b444b;
+    color: #feed43;
+    border-radius: 10px 10px 0 0;
+    padding: 7px 0;
+    width: 100%;
+    text-align: center;
+    text-decoration: none;
+    font-size: 20px;
+}
+a:hover.article-top, a:active.article-top {
+    background-color: #000000;
+    color: #ffff00;
+}
+a:visited.article-top {
+    color: #babe18;
+}
+span.title {
+    width: 100%;
+    padding: 0 12px;
+    word-wrap: break-word;
+}
+
+/* Article Bottom */
+div.article-bottom {
+    background-color: #eaebec;
+    border-radius: 0 0 10px 10px;
+    padding: 7px 12px;
+}
+span.date {
+    color: black;
+    background-color: #efdecd;
+    font-size: 16px;
+    text-align: center;
+    display: inline-block;
+}
+a.tag {
+    background-color: #ba3524;
+    color: white;
     padding: 7px 12px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 20px;
 }
-a:hover.title, a:active.title {
-    background-color: black;
-    font-size: 20px;
-}
-
-p {
-    text-align: left;
-}
-
-h2 {
-    text-align: center;
-}
-
-td {
-    text-align: left;
+a:hover.tag, a:active.tag {
+    background-color: #ff0000;
 }
