reverting change per discussion in #61
I accidently committed my test directory where I had
applied a temporary patch (#61)

--- a/templates/mhwkb_style.css
+++ b/templates/mhwkb_style.css
@@ -58,6 +58,14 @@ span.date {
     text-align: center;
     display: inline-block;
 }
+a.tag {
+    background-color: #ba3524;
+    color: white;
+    padding: 7px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+}
 a:hover.tag, a:active.tag {
     background-color: #ff0000;
 }
