--- a/templates/article_link.html
+++ b/templates/article_link.html
@@ -1,1 +1,1 @@
-<span class="badge badge-pill badge-danger"><a class="tag" href="{{data.link}}">{{data.title}}</a></span>
+<a class="tag" href="{{data.link}}">{{data.title}}</a>
