--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <div class="text-center">
-        <h1>{{data.title}}</h1>
+        <h1><img src="../images/wheel.png" style="width:225px">{{data.title}}</h1>
         {{data.body}}
 
         <a class="btn btn-danger" href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Back Home</a>
