--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,9 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    
+    <!-- Font Awesome references   -->
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
   </head>
   <body>
     <div class="container">
