--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,10 @@
     <div class="container">
       <div class="text-center">
         <h1>{{data.title}}</h1>
+        <h4>Lang: <a href="/">EN</a> | <a href="/DE/">DE</a> | <a href="/HI/">HI</a></h4>
         {{data.body}}
 
-        <a class="btn btn-danger" href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Back Home</a>
+        <a class="btn btn-danger" href="/index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Back Home</a>
         <a class="btn btn-danger" href="https://github.com/andy5995/mhwkb"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a>
         <a class="btn btn-danger" href="https://github.com/mhwkb/mhwkb.github.io/commits/master.atom"><i class="fa fa-rss"></i> RSS</a>
         <br /><br/>
